still need to work a few things outlike the audio and needs a few changes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Trivia Game</title>
+        <!--Google fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Kaushan+Script&display=swap" rel="stylesheet">
          <!--stylesheet -->
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 	     <!--jQuery CDN -->
@@ -31,6 +33,9 @@
 			</div>
 		</div>
 
+		<audio src="../../assets/music/Oscars Theme - MUSIC BY GREG HULME.mp3" id="music"></audio>
+		
+
 		<script src="assets/javascript/app.js"></script>
 
 	</body>
@@ -40,12 +45,8 @@
 <!---
    
 <body>
-    <header>
-        <img src="assets/images/parksandreclogo.png" id="imgLogo" alt="parks and recreation logo">
-        <h1>Trivia</h1>
-    </header>
-    <div class="main-content">
+   
         <button class="startButton">Start Game</button>
-    </div>
+    
     <audio src="assets/themesong.mp3" id="themeSong"></audio>
     </body>-->
